[package]
name = "kube-engine-directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = { version = "0.9.27", optional = true }
tokio = { version = "1.33.0", features = ["full"] }
schemars = { version = "0.8.15", features = ["derive"] }
serde_json = "1.0.108"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
futures-util = "0.3.29"
reqwest = { version = "0.11.22", features = ["rustls", "webpki-roots", "json"], default-features = false }
tracing = "0.1.40"
engine-trait = {git = "https://github.com/unchessful-games/engine-trait"}
rand = "0.8.5"


[features]
print-crd = ["dep:serde_yaml"]
